<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="ice_cream_contentDescription">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_contentDescription">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donuts_contentDescription">Donuts are glazed and sprinkled with candy.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="name_label_text">Name : </string>
    <string name="enter_name_hint">Please enter your name</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="address">Address : </string>
    <string name="Phone">Phone :</string>
    <string name="enter_phone_hint">phone number</string>
    <string name="note">Note</string>
    <string name="enter_note_hint">additional note</string>
    <string name="same_day_messenger_service">Same day messenger service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

</resources>