<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity">

    <TextView
        android:id="@+id/order_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="test field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/order_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_textview">


        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/name_label_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_textview"
            tools:ignore="NotSibling" />


        <EditText
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBaseline_toBaselineOf="@id/name_label"
            app:layout_constraintStart_toEndOf="@+id/name_label" />


        <TextView
            android:id="@+id/address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="32dp"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_label" />


        <EditText
            android:id="@+id/address_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_address_hint"
            android:inputType="textMultiLine|textPostalAddress"
            app:layout_constraintBaseline_toBaselineOf="@id/address_label"
            app:layout_constraintStart_toEndOf="@+id/address_label" />


        <!--phone-->
        <TextView
            android:id="@+id/phone_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/Phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address_text" />


        <EditText

            android:id="@+id/phone_text"
            android:layout_width="168dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_phone_hint"
            android:inputType="phone"
            app:layout_constraintBaseline_toBaselineOf="@id/phone_label"
            app:layout_constraintStart_toEndOf="@+id/phone_label"

            />


        <!--note-->
        <TextView
            android:id="@+id/note_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:text="@string/note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/phone_label" />


        <EditText
            android:id="@+id/note_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:hint="@string/enter_note_hint"
            android:inputType="textMultiLine|textCapSentences"
            app:layout_constraintBaseline_toBaselineOf="@id/note_label"
            app:layout_constraintStart_toEndOf="@+id/note_label" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note_label">

            <RadioButton
                android:id="@+id/sameday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:onClick="onRadioButtonClicked"
                android:text="@string/same_day_messenger_service" />

            <RadioButton
                android:id="@+id/nextday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/next_day_ground_delivery" />

            <RadioButton
                android:id="@+id/pickup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/pick_up" />
        </RadioGroup>

        <Spinner
            android:id="@+id/label_spinner"
            android:layout_width="142dp"
            android:layout_height="54dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@id/phone_text"
            app:layout_constraintTop_toTopOf="@id/phone_text" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>